create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best website maker</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
 
     
 
@@ -208,7 +208,7 @@
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
                     <p class="mbr-text mbr-fonts-style display-7">
-                        © Copyright dbprc GmbH &nbsp;2018- All Rights Reserved
+                        © 2018 dbprc GmbH &nbsp;- All Rights Reserved
                     </p>
                 </div>
                 <div class="col-md-6">
