--- a/lösungen.html
+++ b/lösungen.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source web page maker</a></section><section class="tabs3 cid-qLvZ2KRNWr" id="tabs3-11">
+<section class="engine"><a href="https://mobirise.ws/p">open source web page builder</a></section><section class="tabs3 cid-qLvZ2KRNWr" id="tabs3-11">
 
     
 
