create github pages

--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">how to develop your own website</a></section><section class="testimonials2 cid-qLvY8sNXv0" id="testimonials2-x">
+<section class="engine"><a href="https://mobirise.ws/f">easy site builder</a></section><section class="testimonials2 cid-qLvY8sNXv0" id="testimonials2-x">
 
     
 
