--- a/team.html
+++ b/team.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">simple web builder</a></section><section class="testimonials2 cid-qLvY8sNXv0" id="testimonials2-x">
+<section class="engine"><a href="https://mobirise.ws/p">open source website maker</a></section><section class="testimonials2 cid-qLvY8sNXv0" id="testimonials2-x">
 
     
 
