create github pages

--- a/karriere.html
+++ b/karriere.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free web software</a></section><section class="mbr-section info4 cid-qLw1rjMAdv" data-bg-video="https://www.youtube.com/watch?v=q0LRHkWyNEA" id="info4-17">
+<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="mbr-section info4 cid-qLw1rjMAdv" data-bg-video="https://www.youtube.com/watch?v=q0LRHkWyNEA" id="info4-17">
 
     
 
@@ -97,7 +97,7 @@ bestehender Systeme
 <br>- Flache Hierarchien
 <br>- Interessante Vergütungsmodelle<br>- Unbefristeter Arbeitsvertrag
 <br>- Modernes, innovations- und technikaffines Arbeitsumfeld
-<br>- Raum für eigene Ideen und persönliche Entwicklungsmöglichkeiten<br></p>
+<br>- Raum für eigene Ideen und persönliche Entwicklungsmöglichkeiten<br>-&nbsp;Flexible Arbeitszeiten</p>
                 
             </div>
         </div>
