create github pages

--- a/wir.html
+++ b/wir.html
@@ -71,11 +71,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best web building software</a></section><section class="timeline2 cid-qLvZgoInbO" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="timeline2 cid-qLvZgoInbO" id="timeline2-13">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(204, 204, 204);">
+    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(204, 204, 204);">
     </div>
 
     <div class="container align-center">
