create github pages

--- a/wir.html
+++ b/wir.html
@@ -71,12 +71,11 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="timeline2 cid-qLvZgoInbO" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="timeline2 cid-qLvZgoInbO" id="timeline2-13">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(204, 204, 204);">
-    </div>
+    
 
     <div class="container align-center">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style display-2">
