create github pages

--- a/karriere.html
+++ b/karriere.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/p">open source website builder</a></section><section class="mbr-section info4 cid-qLw1rjMAdv" data-bg-video="https://www.youtube.com/watch?v=q0LRHkWyNEA" id="info4-17">
+<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="mbr-section info4 cid-qLw1rjMAdv" id="info4-17" data-bg-video="https://www.youtube.com/watch?v=q0LRHkWyNEA">
 
     
 
@@ -82,7 +82,7 @@
             <div class="media-container-column title col-12 col-md-10">
                 <h2 class="align-right mbr-bold mbr-white pb-3 mbr-fonts-style display-2">Oracle Software Entwickler (m/w)</h2>
                 <h3 class="mbr-section-subtitle align-right mbr-light mbr-white pb-3 mbr-fonts-style display-5"></h3>
-                <p class="mbr-text align-right mbr-white mbr-fonts-style display-7">Wir konzipieren und realisieren anspruchsvolle Projekte auf Basis von ORACLE-Datenbanken. Themenschwerpunkte sind öffentliche Verwaltung, Versicherungen und wissenschaftliche Forschungsprojekte. Zur Weiterentwicklung und Betreuung unseres bestehenden Systems (prozessgesteuerte Vertrags-, Beitrags- und Dokumentenverwaltung) suchen wir eine(n) erfahrene(n) ORACLE Software Entwickler(in).<br><br>Ihre Aufgaben:<br>- Konzeption und Erstellung von Softwareanwendungen sowie Weiterentwicklung
+                <p class="mbr-text align-right mbr-white mbr-fonts-style display-7"></p><p>Wir konzipieren und realisieren anspruchsvolle Projekte auf Basis von ORACLE-Datenbanken. Themenschwerpunkte sind öffentliche Verwaltung, Versicherungen und wissenschaftliche Forschungsprojekte. Zur Weiterentwicklung und Betreuung unseres bestehenden Systems (prozessgesteuerte Vertrags-, Beitrags- und Dokumentenverwaltung) suchen wir eine(n) erfahrene(n) ORACLE Software Entwickler(in).<br><br>Ihre Aufgaben:<br>- Konzeption und Erstellung von Softwareanwendungen sowie Weiterentwicklung
 bestehender Systeme
 <br>- Zusammenarbeit mit anderen Fachbereichen und IT-Sachgebieten
 <br>- Mitarbeit an Projekten bzw. Projektleitung im Rahmen unserer gesamten &nbsp;Softwareumgebung
@@ -97,7 +97,8 @@ bestehender Systeme
 <br>- Flache Hierarchien
 <br>- Interessante Vergütungsmodelle<br>- Unbefristeter Arbeitsvertrag
 <br>- Modernes, innovations- und technikaffines Arbeitsumfeld
-<br>- Raum für eigene Ideen und persönliche Entwicklungsmöglichkeiten<br>-&nbsp;Flexible Arbeitszeiten</p>
+<br>- Raum für eigene Ideen und persönliche Entwicklungsmöglichkeiten<br>-&nbsp;Flexible Arbeitszeiten<br><br><br>Ist das etwas für Sie? Dann erwarten wir gerne Ihre vollständige Bewerbung!
+<br>E-Mail:bewerbung@dbprc.de<br></p><br><p>Wir freuen uns auf Sie!&nbsp;<br></p><p></p>
                 
             </div>
         </div>
