--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free website software</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
 
     
 
@@ -99,7 +99,7 @@
 <br>- Anwendungsbetreuung &amp; Support
 <br>- Weiterentwicklung schon bestehender Anwendungen
 <br>- Consulting bei Projekten</p>
-                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="index.html">DEMO</a></div>
+                    <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-secondary display-4" href="index.html">LIVE DEMO</a></div>
 
                     <div class="icons-media-container mbr-white">
                         <div class="card col-12 col-md-6">
