--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">create your own website</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
+<section class="engine"><a href="https://mobirise.ws/i">how to build free website</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
 
     
 
@@ -148,9 +148,9 @@
 <br>Ulrich Wachter
 <br>Dynamostraße 15
 <br>68165 Mannheim
-<br>Tel.: +49 (0)621 124706 10
-<br>Fax: +49 (0)621 124706 11
-<br>E-Mail: ulrich.ph.wachter@dbprc.de
+<br>Tel.: <a href="tel:+49 621 124706 10">+49 (0)621 124706 10</a>
+<br>Fax: <a href="tel:+49 621 124706 11">+49 (0)621 124706 11</a>
+<br>E-Mail: <a href="mailto:ulrich.ph.wachter@dbprc.de">ulrich.ph.wachter@dbprc.de</a>
 <br> 
 <br><br><br><em><a href="formular.html">Kontakt</a>&nbsp; &nbsp; &nbsp;</em>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <em><a href="impressum.html">Impressum</a></em></p><p></p>
             </div>
@@ -159,18 +159,18 @@
 <div>Verwaltung&nbsp;</div></h5>
                 <p class="mbr-text">Makartstraße 3 
 <br>75175 Pforzheim 
-<br>Tel.: +49 (0)7231 45504 08 
-<br>Fax: +49 (0)7231 45504 07 
-<br>E-Mail: info@dbprc.de&nbsp;</p>
+<br>Tel.: <a href="tel:+49 7231 45504 08">+49 (0)7231 45504 08</a> 
+<br>Fax: <a href="tel:+49 7231 45504 07">+49 (0)7231 45504 07</a> 
+<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.de</a>&nbsp;</p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">dbprc GmbH 
 <div>Entwicklung</div></h5>
                 <p class="mbr-text">Dynamostraße 15 
 <br>68165 Mannheim 
-<br>Tel.: +49 (0)621 124706 10 
-<br>Fax: +49 (0)621 124706 11 
-<br>E-Mail: info@dbprc.de&nbsp;</p>
+<br>Tel.: <a href="tel:+49 621 124 706 10">+49 (0)621 124706 10</a> 
+<br>Fax: <a href="tel:+49 621 124706 11">+49 (0)621 124706 11</a> 
+<br>E-Mail: <a href="mailto:info@dbprc.de">info@dbprc.de</a>&nbsp;</p>
             </div>
         </div>
         <div class="footer-lower">
