--- a/wir.html
+++ b/wir.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="timeline2 cid-qLvZgoInbO" id="timeline2-13">
+<section class="engine"><a href="https://mobirise.ws/h">how to make own website</a></section><section class="timeline2 cid-qLvZgoInbO mbr-parallax-background" id="timeline2-13">
 
     
 
@@ -238,6 +238,7 @@
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/viewportchecker/jquery.viewportchecker.js"></script>
   <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
