create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">offline website creator download</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
+<section class="engine"><a href="https://mobirise.ws/g">create your own website</a></section><section class="header12 cid-qL88L4TNcr mbr-fullscreen mbr-parallax-background" id="header12-k">
 
     
 
@@ -82,13 +82,12 @@
                 <div class="col-md-12 align-center">
                     <h1 class="mbr-section-title pb-3 mbr-white mbr-bold mbr-fonts-style display-2"><br>dbprc– Einfachheit in einer neuen Dimension</h1>
                     <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5"><strong>Wer sind wir</strong>
-<br><br>dbprc ist ein erfolgreicher mittelständischer IT-Dienstleister.
+<br><br><em>dbprc</em> ist ein erfolgreicher mittelständischer IT-Dienstleister.
 <br>Wir sind ein innovatives Team von hochqualifizierten Informatikern und Entwicklern mit Niederlassungen in Mannheim und Pforzheim
 <br>
 <br>Unsere Kernkompetenz liegt in der ORACLE-Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE-Datenbanksystemen
 <br>
 <br>Unsere Kunden sind u.a. bundesweit verantwortliche öffentliche Organisationen und Unternehmen  der Privatwirtschaft
-<br>
 <br> 
 <br><strong>Was machen wir</strong>
 <br><br>Seit 1996 entwickeln wir für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit im Bereich 
