create github pages

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="header1 cid-qMKWdoun0h mbr-parallax-background" id="header1-2q">
+<section class="engine"><a href="https://mobirise.ws/f">simple web maker</a></section><section class="header1 cid-qMKWdoun0h mbr-parallax-background" id="header1-2q">
 
     
 
@@ -89,9 +89,7 @@
 <br>
 <br>Unsere Kernkompetenz liegt in der ORACLE-Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE-Datenbanksystemen 
 <br>
-<br>Unsere Kunden sind u.a. bundesweit verantwortliche öffentliche Organisationen und Unternehmen der Privatwirtschaft 
-<br>
-<br><strong>Was machen wir</strong> 
+<br>Unsere Kunden sind u.a. bundesweit verantwortliche öffentliche Organisationen und Unternehmen der Privatwirtschaft <br><br><strong>Was machen wir</strong> 
 <br>
 <br>Seit 1996 entwickeln wir für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit im Bereich 
 <br>ORACLE + Java + Android</p>
