--- a/index.html
+++ b/index.html
@@ -71,34 +71,39 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website authoring software</a></section><section class="header1 cid-qMKWdoun0h mbr-parallax-background" id="header1-2q">
+<section class="engine"><a href="https://mobirise.ws/e">best web development software</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
 
     
 
     
 
     <div class="container">
-        <div class="row justify-content-md-center">
-            <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-2">dbprc– Einfachheit in einer neuen Dimension</h1>
-                <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2"></h3>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-5"><strong>Wer sind wir</strong> 
-<br>
-<br><em>dbprc</em> ist ein erfolgreicher mittelständischer IT-Dienstleister. 
+        <div class="media-container-column mbr-white col-md-8">
+            <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-5"></h1>
+            <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">dbprc– Einfachheit in einer neuen Dimension</h3>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-7"><strong>Wer sind wir</strong> <br><br><em>dbprc</em> ist ein erfolgreicher mittelständischer IT-Dienstleister. 
 <br>Wir sind ein innovatives Team von hochqualifizierten Informatikern und Entwicklern mit Niederlassungen in Mannheim und Pforzheim 
 <br>
 <br>Unsere Kernkompetenz liegt in der ORACLE-Anwendungsentwicklung und der ganzheitlichen Beratung und Betreuung rund um ORACLE-Datenbanksystemen 
 <br>
-<br>Unsere Kunden sind u.a. bundesweit verantwortliche öffentliche Organisationen und Unternehmen der Privatwirtschaft <br><br><strong>Was machen wir</strong> 
+<br>Unsere Kunden sind u.a. bundesweit verantwortliche öffentliche Organisationen und Unternehmen der Privatwirtschaft 
 <br>
+<br><strong>Was machen wir 
+</strong><br>
 <br>Seit 1996 entwickeln wir für unsere Kunden individuelle und maßgeschneiderte Softwarelösungen von höchster Qualität und Zuverlässigkeit im Bereich 
 <br>ORACLE + Java + Android</p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-white-outline display-4" href="index.html">
-                        <span class="mbr-iconfont mbri-idea"></span>LIVE DEMO</a></div>
+            <div class="mbr-section-btn align-left">
+                <a class="btn btn-md btn-primary display-4" href="https://mobirise.com">LEARN MORE</a>
+                <a class="btn btn-md btn-black-outline display-4" href="https://mobirise.com">LIVE DEMO</a>
             </div>
         </div>
     </div>
 
+    <div class="mbr-arrow hidden-sm-down" aria-hidden="true">
+        <a href="#next">
+            <i class="mbri-down mbr-iconfont"></i>
+        </a>
+    </div>
 </section>
 
 <section class="cid-qMrGjbFcLw mbr-reveal" id="footer1-1o">
