--- a/karriere.html
+++ b/karriere.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/logo-huge-528x191.png" alt="" title="" style="height: 3.8rem;">
+                         <img src="assets/images/imageedit-28-6392666693-264x96.png" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free website builder</a></section><section class="mbr-section info4 cid-qLw1rjMAdv" id="info4-17" data-bg-video="https://www.youtube.com/watch?v=q0LRHkWyNEA">
+<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="mbr-section info4 cid-qLw1rjMAdv" id="info4-17" data-bg-video="https://www.youtube.com/watch?v=q0LRHkWyNEA">
 
     
 
