--- a/impressum.html
+++ b/impressum.html
@@ -70,7 +70,7 @@ Quellenangaben: Disclaimer eRecht24, Datenschutzerklärung Google Analytics">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/logo-huge-528x191.png" alt="" title="" style="height: 3.8rem;">
+                         <img src="assets/images/imageedit-28-6392666693-264x96.png" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -99,7 +99,7 @@ Quellenangaben: Disclaimer eRecht24, Datenschutzerklärung Google Analytics">
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best free website creator</a></section><section class="header12 cid-qL8cVDQiny mbr-parallax-background" id="header12-n">
+<section class="engine"><a href="https://mobirise.ws/c">best free website maker</a></section><section class="header12 cid-qL8cVDQiny mbr-parallax-background" id="header12-n">
 
     
 
