--- a/lösungen.html
+++ b/lösungen.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/logo-huge-528x191.png" alt="" title="" style="height: 3.8rem;">
+                         <img src="assets/images/imageedit-28-6392666693-264x96.png" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
+<section class="engine"><a href="https://mobirise.ws/o">best mobile website builder</a></section><section class="tabs3 cid-qLvZ2KRNWr mbr-parallax-background" id="tabs3-11">
 
     
 
@@ -187,7 +187,7 @@ Kriterien durchzusuchen.&nbsp;<br><br><br><br><br></p>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-extension mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-delivery"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5"><p>
                                 Routeberechnung</p></h4>
@@ -198,11 +198,10 @@ Kriterien durchzusuchen.&nbsp;<br><br><br><br><br></p>
 
                         <div class="col-xs-12 col-md-6 col-lg-4">
                             <div class="card-img ">
-                                <span class="mbri-extension mbr-iconfont"></span>
+                                <span class="mbr-iconfont mbri-letter"></span>
                             </div>
                             <h4 class="mbr-element-title  align-center mbr-fonts-style pb-2 display-5">
-                                TRENDY WEBSITE BLOCKS
-                            </h4>
+                                Adressevalidierung</h4>
                             <p class="mbr-section-text  align-center mbr-fonts-style display-7">
                                 Choose from the large selection  pre-made blocks - full-screen intro, bootstrap carousel, slider, responsive image gallery with, parallax scrolling, sticky header and more.
                             </p>
