--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                         <img src="assets/images/imageedit-28-6392666693-264x96.png" alt="" title="" style="height: 3.8rem;">
+                         <img src="assets/images/logo-huge-528x191.png" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -71,7 +71,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">how to design own website</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
+<section class="engine"><a href="https://mobirise.ws/f">easy website builder</a></section><section class="header9 cid-qMPvlR6sro mbr-fullscreen mbr-parallax-background" id="header9-2t">
 
     
 
